feat: retrieve friends list for an email address
