# be/api/router/friendship_routes.go
@@ -9,4 +9,5 @@ import (
 
 func registerFriendshipRoutes(api *gin.RouterGroup, h *handler.FriendshipHandler, db *gorm.DB) {
 	api.POST("/friendship", h.CreateFriendship)
+	api.GET("/friendship/friends", h.RetrieveFriendsList)
 }
